# cqrs-python

./: README.md
events-core/: Dockerfile  Dockerfile-prod  compose.yaml  pyproject.toml
events-core/events_core/: app.py
payment-acl/: .gitignore  pyproject.toml
ticket-service/: pyproject.toml
