[project]
name = "events-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Silva",email = "chrislcontrol@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
